Fixed spacing

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -14,6 +14,7 @@
 }
 .form-style {
 	padding-top: 15px;
+	padding-left: 50px !important;
 }
 .form-style h2 {
 	padding-bottom: 10px;
